front_end: Align publication meta-data correctly in publication list view

--- a/front_end/assets/css/_publication_cat_list_icons.styl
+++ b/front_end/assets/css/_publication_cat_list_icons.styl
@@ -4,6 +4,8 @@
   .publication-meta, figure
     display: inline-block
     vertical-align: top
+  .publication-meta
+    width: 60%
   figure
     background: #fafafa
     margin-right: 7%
